# pinch

./: .gitignore  CHANGELOG.md  ETHICS.md  LICENSE  README.md
.github/workflows/: node.yml  python.yml  release.yml
docs/: architecture.md  faq.md  invariants.md  telegram-post.md
examples/node-monorepo-batch/: README.md  index.ts  package.json
examples/node-single-project/: README.md  index.ts  package.json
examples/python-ci-nightly/: README.md  jobs.json  main.py
examples/python-single-project/: README.md  main.py
node/: package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
node/src/: config.ts  dispatcher.ts  index.ts  invariants.ts  jitter.ts  notifier.ts  pacer.ts  queue.ts  runner.ts  semaphore.ts  types.ts  window.ts
node/test/: config.spec.ts  integration.spec.ts  invariants.spec.ts  jitter.spec.ts  queue.spec.ts  runner.spec.ts  semaphore.spec.ts  window.spec.ts
python/: pyproject.toml
python/src/pinch/: __init__.py  config.py  dispatcher.py  invariants.py  jitter.py  notifier.py  pacer.py  queue.py  runner.py  semaphore.py  types.py  window.py
python/tests/: test_config.py  test_integration.py  test_invariants.py  test_jitter.py  test_queue.py  test_runner.py  test_semaphore.py  test_window.py
