[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "itsalt-pinch"
version = "0.0.0"
description = "Architecturally-capped pacing for parallel claude -p calls. Automate yourself, not around Anthropic."
readme = "../README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "ITSalt" }]
keywords = ["claude", "anthropic", "cli", "pacing", "rate-limit", "automation", "ethical"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  'tzdata; sys_platform == "win32"',
]

[project.urls]
Homepage = "https://github.com/ITSalt/pinch"
Repository = "https://github.com/ITSalt/pinch.git"
Issues = "https://github.com/ITSalt/pinch/issues"
Changelog = "https://github.com/ITSalt/pinch/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "ruff>=0.7",
  "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pinch"]

[tool.hatch.build.targets.sdist]
include = ["src/pinch", "../README.md", "../LICENSE"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/pinch"]
